--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 50px;
+  padding: 50px 0px;
 }
 .canvas {
   width: 700px;
@@ -29,5 +29,34 @@ body {
   flex-direction: row;
 }
 .controls {
-  margin-top: 50px;
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.controls__btns {
+  margin-bottom: 30px;
+}
+.controls__btns button {
+  all: unset;
+  cursor: pointer;
+  background-color: white;
+  padding: 5px 0px;
+  width: 80px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.8);
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 12px;
+}
+.controls__btns button:active {
+  transform: scale(0.9);
+}
+.controls__range {
+  margin-bottom: 30px;
 }
